--- a/app/views/layouts/_carousel.html.erb
+++ b/app/views/layouts/_carousel.html.erb
@@ -10,15 +10,16 @@
   <!--  pics-->
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img class="img-fluid" src="assets/shoes-970354_1920.jpg" alt="Friends">
+<!--      <img class="img-fluid" src="assets/shoes-970354_1920.jpg" alt="Friends">-->
+      <%= image_tag("shoes-970354_1920.jpg", alt: "Friends") %>
     </div>
 
     <div class="carousel-item">
-      <img class="img-fluid" src="assets/car-1209334_1920.jpg" alt="Home">
+      <%= image_tag("car-1209334_1920.jpg", alt: "Home") %>
     </div>
 
     <div class="carousel-item">
-      <img class="d-block w-100 h-100" src="assets/rain-122691_1920.jpg" alt="Rain">
+      <%= image_tag("rain-122691_1920.jpg", alt: "Rain") %>
     </div>
   </div>
 
