--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,7 +1,7 @@
 <% content_for :head, 'Users' %>
 
 <!--heading-->
-<div class="container-fluid text-justify">
+<div class="container-fluid text-justify productDescription">
   <!--  padding top-->
   <div class="row content">
     <br>
