--- a/app/views/admin/index.html.erb
+++ b/app/views/admin/index.html.erb
@@ -1,5 +1,5 @@
-<h1>Admin panel</h1>
-<p><%= Time.now %>
+<h1 id="admin_title">Admin panel</h1>
+<p id="admin_info"><%= Time.now %>
   <br>
   Order counter: <%= @total_orders %>
 </p>
